[package]
name = "solana-copytrading-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Solana copytrading bot using Helius gRPC and Jito bundles"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

# Solana SDK
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
solana-account-decoder = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# gRPC for streaming (without protobuf-src dependency)
tonic = { version = "0.10", features = ["tls", "tls-roots", "transport"] }
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bs58 = "0.5"
base64 = "0.21"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.8"

# HTTP client (for fallback and Jito HTTP)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Borsh for Solana program data parsing
borsh = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
